--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jonsnext",
+  "name": "jonspass",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -14,6 +14,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@next/font": "^14.2.15",
     "next": "^15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -21,6 +22,9 @@
   },
   "devDependencies": {
     "@types/node": "22.13.0",
-    "@types/react": "19.0.8"
+    "@types/react": "19.0.8",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.0.9"
   }
 }
